_sass/layout/_article.scss
.article {
    &__hero {
        position: relative;
        height: 400px;
        position: relative;
        background-image: linear-gradient(-134deg, $primary-green 0%, $primary-blue 100%);
        background-attachment: fixed;
        overflow: hidden;

        &-title {
            @include media-breakpoint-down(sm) {
                font-size: $font-size-base * 1.5;
            }
        }
        &-date {
            margin-bottom: 100px;
            font-family: $font-family-regular;
        }
    }

    &__main {
        position: relative;
    }

    &__content {
        position: relative;
        transform: translateY(-100px);

        p, ul {
            a {
                box-shadow: 0px -3px 0px 0px $primary-green inset;
                text-decoration: none !important;
                transition: box-shadow 0.25s ease-in-out;
            
                &:hover {
                    box-shadow: 0px -18px 0px 0px $primary-green inset;
                }
            }
        }

        img {
            max-width: 100%;
            height: auto;
            display: block;
            margin: 0 auto;
        }

        @include media-breakpoint-down(sm) {
            padding: $spacer * 4 !important;
            padding-top: $spacer * 7 !important;
        }
    }

    &__author-avatar {
        display: block;
        top: -50px;
        left: 50%;
        transform: translateX(-50%);
        height: 100px;
        width: 100px;
        position: absolute;
        background-size: contain;
        background-position: center;
        background-repeat: no-repeat;
        border: 6px solid $white;
        border-radius: 100%;

        @include media-breakpoint-down(sm) {
            top: -35px;
            height: 70px;
            width: 70px;
            border-width: 4px;
        }
    }

}

